bookstack.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      bb: bookstack
  template:
    metadata:
      labels:
        bb: bookstack
    spec:
      containers:
        - name: bookstack
          image: lscr.io/linuxserver/bookstack:latest
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      bb: mysql
  template:
    metadata:
      labels:
        bb: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.6
          imagePullPolicy: IfNotPresent
---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  annotations:
#    spec.ingressClassName: traefik
#    cert-manager.io/cluster-issuer: letsencrypt-staging
#  name: bookstack-ingress
#  namespace: default
#spec:
#  rules:
#    - host: bookstack.17042021.xyz
#      http:
#        paths:
#        - path: /
#          pathType: Prefix
#          backend:
#            service:
#              name: bookstack-service
#              port:
#                number: 80
#  tls:
#  - hosts:
#    - bookstack.17042021.xyz
#    - bookstack.thedc.space
#    - bookstack.dogsbody.work
#    secretName: bookstack-cert

---
apiVersion: v1
kind: Service
metadata:
  name: bookstack-mysql-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    bb: mysql
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: bookstack-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    bb: bookstack
  ports:
    - port: 80
      targetPort: 80
